// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`country helpers getConfigByISOName country configs australia 1`] = `
{
  "code": 36,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Hanafi",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs bangladesh 1`] = `
{
  "code": 50,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "bangla",
  },
  "prayer_settings": {
    "asr_method": "Hanafi",
    "calculation_method": "Karachi",
  },
}
`;

exports[`country helpers getConfigByISOName country configs canada 1`] = `
{
  "code": 124,
  "features": {
    "education": false,
    "events": true,
    "iqamahTimes": true,
    "iqamahTiming": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "ISNA",
  },
}
`;

exports[`country helpers getConfigByISOName country configs egypt 1`] = `
{
  "code": 818,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "Egypt",
  },
}
`;

exports[`country helpers getConfigByISOName country configs france 1`] = `
{
  "code": 250,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "union-des-organisations-islamiques-de-france",
  },
}
`;

exports[`country helpers getConfigByISOName country configs india 1`] = `
{
  "code": 356,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "hindi",
  },
  "prayer_settings": {
    "asr_method": "Hanafi",
    "calculation_method": "Karachi",
  },
}
`;

exports[`country helpers getConfigByISOName country configs new_zealand 1`] = `
{
  "code": 554,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Hanafi",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs pakistan 1`] = `
{
  "code": 586,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "urdu",
  },
  "prayer_settings": {
    "asr_method": "Hanafi",
    "calculation_method": "Karachi",
  },
}
`;

exports[`country helpers getConfigByISOName country configs saudia_arabia 1`] = `
{
  "code": 682,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "Makkah",
  },
}
`;

exports[`country helpers getConfigByISOName country configs turkey 1`] = `
{
  "code": 792,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "Türkçe",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "turkey-presidency-of-religious-affairs",
  },
}
`;

exports[`country helpers getConfigByISOName country configs turkiye 1`] = `
{
  "code": 792,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "Türkçe",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "turkey-presidency-of-religious-affairs",
  },
}
`;

exports[`country helpers getConfigByISOName country configs united_arab_emirates 1`] = `
{
  "code": 784,
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "Karachi",
  },
}
`;

exports[`country helpers getConfigByISOName country configs united_kingdom 1`] = `
{
  "code": 826,
  "features": {
    "education": false,
    "events": false,
    "iqamahTimes": true,
    "iqamahTiming": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getConfigByISOName country configs united_states 1`] = `
{
  "code": 840,
  "features": {
    "education": true,
    "events": true,
    "iqamahTimes": true,
    "iqamahTiming": false,
    "mosques": true,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "ISNA",
  },
}
`;

exports[`country helpers getConfigByISOName returns default config if country not found 1`] = `
{
  "code": null,
  "features": {
    "education": false,
    "events": false,
    "iqamahTiming": false,
    "mosques": false,
    "prayerTimes": true,
  },
  "mosque": {
    "denomination": "sunni",
    "language_services": "english",
  },
  "prayer_settings": {
    "asr_method": "Standard",
    "calculation_method": "MWL",
  },
}
`;

exports[`country helpers getCountryByISOName returns country info if found 1`] = `
{
  "aliases": [
    "America",
    "U.S.",
    "U.S.A.",
  ],
  "alpha2": "US",
  "alpha3": "USA",
  "emoji": "🇺🇸",
  "fifa": "USA",
  "ioc": "USA",
  "iso_name": "United States",
  "numeric": "840",
  "official": "United States of America",
  "short": "United States",
  "shortcode": ":flag-us:",
}
`;
